mysql-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-frontend
  name: mysql-frontend
  namespace: <your-namespace>
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-frontend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: <your-proxy-config>
        image: <your-registry:image>
        imagePullPolicy: IfNotPresent
        name: mysql-frontend
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 16Gi
          requests:
            cpu: "2"
            memory: 8Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
