svc_mysql-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-frontend
  name: mysql-frontend
  namespace: <your_namespace>
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mysql-frontend
  sessionAffinity: None
  type: ClusterIP
